# PFWotR_Planner

./: .coverage  .gitignore  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  setup.cfg
data/: classes.json  feats.json  races.json
models/: character.py  json_loader.py
src/wotr_planner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wotr_planner/data/: feats.json  heritages.json  races.json  skills.json
src/wotr_planner/db/: database.py
src/wotr_planner/models/: character.py  feat_schema.py  json_loader.py
src/wotr_planner/ui/: background_tab.py  classes_tab.py  feats_tab.py  heritage_tab.py  main_window.py  races_tab.py  skills_tab.py  stats_tab.py
tests/integration/: test_json_classes.py  test_json_feats.py  test_json_races.py
tests/schema/: test_class_schema.py  test_feat_schema.py  test_feats_json_schema.py  test_race_schema.py
tests/unit/: test_character.py  test_classes_tab.py  test_feats_tab.py  test_json_loader.py  test_stats.py  test_utils.py
ui/: background_tab.py  character_tab.py  classes_tab.py  feats_tab.py  heritage_tab.py  main_window.py  races_tab.py  skills_tab.py  stats_tab.py
wotr_planner.egg-info/: SOURCES.txt  top_level.txt
