[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wotr-planner"
version = "0.1.0"
description = "Pathfinder/WotR character planner"
authors = [{ name = "Jeremy" }]
license = { text = "MIT" }
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]